# Length-Value-Model

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
LlamaFactory-LenVM/: llamafactory_changes.diff
data_generation/: data_generation.md
data_generation/data_generator/: __init__.py  config.py  generator.py  main.py  processor.py  prompt_builder.py  utils.py
data_generation/utils/: distribution_analysis.py  download_save_opencodereasoning2.py  downsampler.py  jsonl_to_json.py
docs/: getting-started.md  repository-structure.md  workflows.md
inference/LIFEBench/: .gitignore  LICENSE  README.md  evaluate.py  requirements.txt  run_exp.py
inference/length_prediction/: eval_first_token_prediction.py
inference/length_token/: analyze_length_token.py  plot_token_wordcloud.py
inference/tradeoff/: budget_eval.py  plot_baseline_vs_centered_exp_commands.md  plot_baseline_vs_lenvm.py  sample_eval.py
inference/visualization/: default_text_sample.json  length_curver_hover_demo.py  real_sample_tree_value_visualization.py  real_sample_tree_value_visualization_vl.py  real_sample_tree_value_visualization_vl_hf.py
old_docs_scripts/: server.md  visualization.md
scripts/: download_data_and_model.sh
scripts/data_generation/: demo.sh
scripts/environment/: env_config_uv.sh
scripts/inference/: demo_length_prediction.sh  demo_length_token.sh  demo_lifebench.sh  demo_tradeoff.sh
scripts/remote_slurm_job/: submit_job.sh.example  sync_to_remote.sh  train.slurm
scripts/training/: demo.sh
scripts/visualization/: demo_visual.sh
(+74 files in other folders)
